// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`binary left 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`binary left 'a+a' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary left 'a + a' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary left 'a + b' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "+",
  "b",
]
`;

exports[`binary left 'a + b+c' conditional success tests AST matches snapshot 1`] = `
[
  [
    "a",
    "+",
    "b",
  ],
  "+",
  "c",
]
`;

exports[`binary left 'a + b + c' conditional success tests AST matches snapshot 1`] = `
[
  [
    "a",
    "+",
    "b",
  ],
  "+",
  "c",
]
`;

exports[`binary left 'ab+' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": 1,
}
`;

exports[`binary left '+ab' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a' or 'b' or 'c'",
  ],
  "pos": 0,
}
`;

exports[`binary left 'bcaba' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": 1,
}
`;

exports[`binary right 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`binary right 'a+a' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary right 'a + a' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "+",
  "a",
]
`;

exports[`binary right 'a + b' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "+",
  "b",
]
`;

exports[`binary right 'a + b+c' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "+",
  [
    "b",
    "+",
    "c",
  ],
]
`;

exports[`binary right 'a + b + c' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "+",
  [
    "b",
    "+",
    "c",
  ],
]
`;

exports[`binary right 'ab+' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": 1,
}
`;

exports[`binary right '+ab' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a' or 'b' or 'c'",
  ],
  "pos": 0,
}
`;

exports[`binary right 'bcaba' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'+'",
    "eof",
  ],
  "pos": 1,
}
`;

exports[`prefix 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`prefix '-a' conditional success tests AST matches snapshot 1`] = `
[
  "-",
  "a",
]
`;

exports[`prefix '--a' conditional success tests AST matches snapshot 1`] = `
[
  "-",
  [
    "-",
    "a",
  ],
]
`;

exports[`prefix 'a - b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 1,
}
`;

exports[`prefix 'ab-' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 1,
}
`;

exports[`prefix '-ab' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 2,
}
`;

exports[`prefix 'bcaba' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'-'",
    "'a'",
  ],
  "pos": 0,
}
`;

exports[`postfix 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`postfix 'a-' conditional success tests AST matches snapshot 1`] = `
[
  "-",
  "a",
]
`;

exports[`postfix 'a--' conditional success tests AST matches snapshot 1`] = `
[
  "-",
  [
    "-",
    "a",
  ],
]
`;

exports[`postfix 'a- b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'-'",
    "eof",
  ],
  "pos": 2,
}
`;

exports[`postfix 'ab-' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'-'",
    "eof",
  ],
  "pos": 1,
}
`;

exports[`postfix '-ab' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 0,
}
`;

exports[`postfix 'bcaba' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 0,
}
`;

exports[`function 'a' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": 1,
}
`;

exports[`function 'a()' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'b'",
  ],
  "pos": 2,
}
`;

exports[`function 'a(b)' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "b",
]
`;

exports[`function 'a (b)' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": 1,
}
`;

exports[`function '(b)' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 0,
}
`;

exports[`function 'a b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": 1,
}
`;

exports[`function 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": 0,
}
`;
